--- a/templates/password.html
+++ b/templates/password.html
@@ -60,6 +60,13 @@
           我的粉丝
         </a>
       </li>
+         <li>
+        <a href="{% url 'livefile'%}" class="nav-link link-dark">
+          <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
+          我的直播间
+        </a>
+      </li>
+
     </ul>
     <hr>
     <div class="dropdown">
