--- a/templates/livefile.html
+++ b/templates/livefile.html
@@ -92,7 +92,9 @@
 				<input type="submit" class="btn btn-info btn-lg btn-block" value="save">
 				{% endbuttons%}
 			</form>
-                <a class="btn btn-success btn-lg btn-block" href="{% url 'room' id %}">进入直播间</a>
+            {% if liveroom %}
+                <a class="btn btn-success btn-lg btn-block" href="{% url 'room' liveroom.roomID %}">进入直播间</a>
+            {% endif %}
     </div>
 </div>
 {% endblock content %}
