--- a/templates/room.html
+++ b/templates/room.html
@@ -247,7 +247,10 @@
         document.querySelector('#chat-message-submit').onclick = function(e) {
             const messageInputDom = document.querySelector('#chat-message-input');
             const data = messageInputDom.value;
-
+            if(data=="")
+            {
+                return;
+            }
 
             const name =  "{{user.NickName}}";
             const message= {"data": data,
